2014-09-17  Per Bothner  <per@bothner.com>

	* LispReader.java (returnMutablePairs): New field.
	(setReturnMutablePairs): New method.
	(makePair): Return plain mutable Pair if returnMutablePairs.
	(handlePostfix): Use makePair.

2014-09-16  Per Bothner  <per@bothner.com>

	* LispReader.java (parseNumber): Interpret a negative radix as
	an overloadable default.  Needed for string->number.

2014-09-14  Per Bothner  <per@bothner.com>

	* ReaderDispatch.java (read): Return a non-empty value on an
	invalid dispatch character - it seems less likely to cause confusion.

2014-08-28  Per Bothner  <per@bothner.com>

	* LangPrimType.java (isCompatibleWithValue): Add hack for charType.

2014-08-27  Per Bothner  <per@bothner.com>

	* LangObjType.java (isCompatibleWithValue): New override.

	* LangObjType.java (emitCoerceFromObject): Support promiseType.

	* LangPrimType.java (voidType): Just make an alias for Type.voidType.

2014-08-11  Per Bothner  <per@bothner.com>

	* LangPrimType.java (emitCoerceFromObject): Optimize for char or
	character if matching boxed type.

2014-08-05  Per Bothner  <per@bothner.com>

	* LispReader.java (readCharacter): Handle non-BMP characters.

2014-08-01  Per Bothner  <per@bothner.com>

	* LangPrimType.java (coerceFromObject): Convert character types
	to raw type suitable for reflection - i.e. Integer.

2014-07-27  Per Bothner  <per@bothner.com>

	* LangObjType.java: Change to extend SpecialObjectType.
	Some methods and fields moved to SpecialObjectType.

2014-07-22  Per Bothner  <per@bothner.com>

	* LangPrimType.java (stringCursorType): New 'string-cursor' type.
	* LispLanguage.java (getTypeMap):  Add 'string-cursor'.

2014-07-02  Per Bothner  <per@bothner.com>

	* LangPrimType.java (characterType, characterOrEofType): New instances.
	Add support for the new types, whose implementation type is int.
	* LispLanguage.java (getTypeMap): Update "character".
	Add binding for "character-or-eof".
	* LangObjType.java (compare): Minor tweak.
