@@ -1,3 +1,8 @@
+2014-09-23  Per Bothner  <per@bothner.com>
+
+	* LispReader.java (readNumberWithRadix): Check for and append '#'
+	tokenBuffer, so we can handle '#' beyond teh initial character.
+
 2014-09-17  Per Bothner  <per@bothner.com>
 
 	* LispReader.java (returnMutablePairs): New field.
